<resources>
    <string name="intro">Are you a chef de cuisine or should you enroll in remedial cooking classes?  Take this quick quiz to find out!</string>
    <string name="app_name">The Cooking Quiz</string>
    <string name="question_1">1. What’s the name of the chemical reaction that happens when you brown or caramelize food by searing it?</string>
    <string name="answer1_1">The Hydrolysis Reaction</string>
    <string name="answer1_2">The Maillard Reaction</string>
    <string name="answer1_3">The Isomerization Reaction</string>
    <string name="answer1_4">The Mendel Reaction</string>
    <string name="question_2">2. Refrigerated cold foods should be stored below this temperature in Fahrenheit in order to prevent bacterial growth.</string>
    <string name="answer2_1">0 Degrees</string>
    <string name="answer2_2">8 Degrees</string>
    <string name="answer2_3">25 Degrees</string>
    <string name="answer2_4">40 Degrees</string>
    <string name="question_3">3. This is the name for the cooked mixture of flour and fat used to thicken liquids.</string>
    <string name="answer3_1a">A </string>
    <string name="answer3_1b">Your answer</string>
    <string name="answer3_1c">.</string>
    <string name="question_4">4. Which of these knife cuts results in the smallest pieces?</string>
    <string name="answer4_1">Brunoise</string>
    <string name="answer4_2">Dice</string>
    <string name="answer4_3">Mince</string>
    <string name="answer4_4">Julienne</string>
    <string name="question_5">5. At what temperature in Fahrenheit should hot foods be kept in order to prevent bacterial growth?</string>
    <string name="answer5_1">140 Degrees</string>
    <string name="answer5_2">150 Degrees</string>
    <string name="answer5_3">160 Degrees</string>
    <string name="answer5_4">170 Degrees</string>
    <string name="question_6">6. What is the name for the cooking technique where something is cooked slowly in its own fat.</string>
    <string name="answer6_1">Braising</string>
    <string name="answer6_2">Quick Frying</string>
    <string name="answer6_3">Deep Frying</string>
    <string name="answer6_4">Confit</string>
    <string name="question_7">7. Which of the following are included in the \"Mother Sauces\" of French cuisine?</string>
    <string name="answer7_1">Bechamel</string>
    <string name="answer7_2">Normandy</string>
    <string name="answer7_3">Velouté</string>
    <string name="answer7_4">Hollandaise</string>
    <string name="answer7_5">Dijon</string>
    <string name="submit">Check my answers</string>
</resources>
