<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.robynandcory.thecookingquiz.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:orientation="vertical"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/intro"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginBottom="18dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:textSize="16sp"
            android:text="@string/question_1" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp">

            <RadioButton
                android:id="@+id/answer1_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer1_1" />

            <RadioButton
                android:id="@+id/answer1_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer1_2" />

            <RadioButton
                android:id="@+id/answer1_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer1_3" />

            <RadioButton
                android:id="@+id/answer1_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer1_4" />
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:textSize="16sp"
            android:text="@string/question_2" />
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp">

            <RadioButton
                android:id="@+id/answer2_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer2_1" />

            <RadioButton
                android:id="@+id/answer2_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer2_2" />

            <RadioButton
                android:id="@+id/answer2_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer2_3" />

            <RadioButton
                android:id="@+id/answer2_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer2_4" />
        </RadioGroup>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:textSize="16sp"
            android:text="@string/question_3" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="16dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer3_1a"/>
        <EditText
            android:id="@+id/questionThree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/answer3_1b"
            android:imeOptions="actionDone"
            android:singleLine="true"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer3_1c"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:textSize="16sp"
            android:text="@string/question_4" />
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp">

            <RadioButton
                android:id="@+id/answer4_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer4_1" />

            <RadioButton
                android:id="@+id/answer4_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer4_2" />

            <RadioButton
                android:id="@+id/answer4_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer4_3" />

            <RadioButton
                android:id="@+id/answer4_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer4_4" />
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:textSize="16sp"
            android:text="@string/question_5" />
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp">

            <RadioButton
                android:id="@+id/answer5_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer5_1" />

            <RadioButton
                android:id="@+id/answer5_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer5_2" />

            <RadioButton
                android:id="@+id/answer5_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer5_3" />

            <RadioButton
                android:id="@+id/answer5_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer5_4" />
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:textSize="16sp"
            android:text="@string/question_6" />
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp">

            <RadioButton
                android:id="@+id/answer6_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer6_1" />

            <RadioButton
                android:id="@+id/answer6_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer6_2" />

            <RadioButton
                android:id="@+id/answer6_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer6_3" />

            <RadioButton
                android:id="@+id/answer6_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer6_4" />
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:textSize="16sp"
            android:text="@string/question_7" />
        <CheckBox
            android:id="@+id/answer7_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer7_1"/>
        <CheckBox
            android:id="@+id/answer7_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer7_2"/>
        <CheckBox
            android:id="@+id/answer7_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer7_3"/>
        <CheckBox
            android:id="@+id/answer7_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer7_4"/>
        <CheckBox
            android:id="@+id/answer7_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer7_5"
            android:layout_marginBottom="16dp"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:layout_marginBottom="24dp"
            android:layout_gravity="center_horizontal"
            android:onClick="checkAnswers"/>



    </LinearLayout>

</ScrollView>
